more fixes for wrapping in ff

--- a/web/saito/css-imports/saito-chat.css
+++ b/web/saito/css-imports/saito-chat.css
@@ -499,6 +499,7 @@
   position: relative;
   padding: 0.25rem;
   word-wrap: anywhere;
+  white-space: normal;
 }
 
 .saito-userline-reply {
